# satellite/console/consoleweb/server.go
@@ -533,14 +533,24 @@ func NewServer(logger *zap.Logger, config Config, service *console.Service, cons
 	auditLogsRouter.Handle("/actions", server.withAuth(server.userIDRateLimiter.Limit(http.HandlerFunc(auditLogsController.ListAuditLogActions)))).Methods(http.MethodGet, http.MethodOptions)
 	auditLogsRouter.Handle("/export", server.withAuth(server.userIDRateLimiter.Limit(http.HandlerFunc(auditLogsController.ExportAuditLogs)))).Methods(http.MethodGet, http.MethodOptions)
 
+	googleBackupUsersGroupsController := consoleapi.NewGoogleBackupUsersGroups(logger, service, server.cookieAuth)
+	googleBackupUsersGroupsRouter := router.PathPrefix("/api/v0/google-backup/users-groups").Subrouter()
+	googleBackupUsersGroupsRouter.Use(server.withCORS)
+	googleBackupUsersGroupsRouter.Use(server.withAuth)
+	googleBackupUsersGroupsRouter.Handle("/domains", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.GetDomains))).Methods(http.MethodGet, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("/mailbox/overview", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.GetMailboxOverview))).Methods(http.MethodGet, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("/mailbox/services", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.GetMailboxServices))).Methods(http.MethodGet, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("/mailbox/schedule", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.GetMailboxSchedule))).Methods(http.MethodGet, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("/mailbox/credentials", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.GetMailboxCredentials))).Methods(http.MethodGet, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("/jobs/active", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.UpdateJobsActive))).Methods(http.MethodPut, http.MethodOptions)
+	googleBackupUsersGroupsRouter.Handle("", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupUsersGroupsController.List))).Methods(http.MethodGet, http.MethodOptions)
+	
 	googleBackupController := consoleapi.NewGoogleBackup(logger, service, server.cookieAuth)
 	googleBackupRouter := router.PathPrefix("/api/v0/google-backup").Subrouter()
 	googleBackupRouter.Use(server.withCORS)
 	googleBackupRouter.Use(server.withAuth)
 	googleBackupRouter.Handle("/connect", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.ConnectGoogle))).Methods(http.MethodPost, http.MethodOptions)
 	googleBackupRouter.Handle("/domain-users", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.GetDomainUsers))).Methods(http.MethodGet, http.MethodOptions)
-	googleBackupRouter.Handle("/auto-sync/users-groups/domains", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.GetUsersGroupsDomains))).Methods(http.MethodGet, http.MethodOptions)
-	googleBackupRouter.Handle("/auto-sync/users-groups", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.ListUsersGroups))).Methods(http.MethodGet, http.MethodOptions)
 	googleBackupRouter.Handle("/backup-restore/logs", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.ListBackupRestoreLogs))).Methods(http.MethodGet, http.MethodOptions)
 	googleBackupRouter.Handle("/auto-sync/jobs", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.CreateAutoSyncJobs))).Methods(http.MethodPost, http.MethodOptions)
 	googleBackupRouter.Handle("/auto-sync/jobs", server.userIDRateLimiter.Limit(http.HandlerFunc(googleBackupController.ListAutoSyncJobs))).Methods(http.MethodGet, http.MethodOptions)
